--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,8 @@
   --bg-secondary: #f5f4fa;
   --bg-box: #ffffff;
   --border-bottom: #ececec;
+  --shadow: rgba(47, 48, 58, 0.4);
+  --border-clients: #afb1b8;
 }
 
 html {
@@ -166,7 +168,8 @@ img {
   background: var(--bg-hero);
   text-align: center;
 
-  background-image: url(../image/img-bg.jpg);
+  background-image: linear-gradient(to right, var(--shadow), var(--shadow)),
+    url(../image/img-bg.jpg);
   max-width: 1600px;
   height: 600px;
 
@@ -236,12 +239,26 @@ img {
   display: block;
   content: "";
   height: 120px;
-  background-size: contain;
+  background-color: var(--bg-secondary);
+
+  background-size: 70px 70px;
   background-repeat: no-repeat;
   background-position: center;
-  background: var(--bg-secondary);
+
   border-radius: 4px;
   margin: 0px 0px 30px 0px;
+}
+.list-item-svg1::before {
+  background-image: url(../image/svg1.svg);
+}
+.list-item-clock2::before {
+  background-image: url(../image/clock2.svg);
+}
+.list-item-diagram3::before {
+  background-image: url(../image/diagram3.svg);
+}
+.list-item-astronaut4::before {
+  background-image: url(../image/astronaut4.svg);
 }
 .section-title {
   font-size: 14px;
@@ -332,6 +349,20 @@ img {
 .clients-box {
   display: flex;
 }
+.clients-link {
+  margin: 0;
+  padding: 0;
+}
+.clients-list-icon {
+  margin: 0px;
+  padding: 0px;
+}
+.clients-margin {
+  width: 170px;
+  height: 90px;
+  padding: 0px;
+}
+
 .clients-margin + .clients-margin {
   margin: 0px 0px 0px 30px;
 }
