--- a/css/styles.css
+++ b/css/styles.css
@@ -313,6 +313,9 @@ img {
 .team-items {
   width: 270px;
   text-align: center;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 }
 .team-items + .team-items {
   margin: 0px 0px 0px 30px;
@@ -379,6 +382,8 @@ img {
   justify-content: center;
 }
 .clients-link {
+  display: flex;
+  justify-content: center;
   align-items: center;
   width: 170px;
   height: 90px;
@@ -511,6 +516,11 @@ img {
   width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
+}
+.portfolio-card:hover {
+  border: 1px solid #eeeeee;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 .portfolio-card:nth-child(3) {
   margin-right: -30px;
