--- a/css/styles.css
+++ b/css/styles.css
@@ -127,6 +127,28 @@ img {
   margin-right: 0px;
 }
 
+.links-transition {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.menu-link {
+  position: relative;
+}
+.menu-link::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: var(--accent-color);
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  opacity: 0;
+}
+.menu-link:hover::after {
+  opacity: 1;
+}
 .site-nav {
   display: flex;
 }
@@ -147,13 +169,15 @@ img {
   height: 12px;
   margin-right: 10px;
 }
-.link-auth-nav-svg:hover svg {
+.link-auth-nav-svg:hover svg,
+.link-auth-nav-svg:focus svg {
   fill: var(--accent-color);
 }
 .list-contacts {
   display: flex;
 }
-.list-contacts:hover {
+.list-contacts:hover,
+.list-contacts:focus {
   fill: var(--accent-color);
 }
 .auth-nav .list-contacts + .list-contacts {
@@ -310,6 +334,37 @@ img {
 .pading {
   padding-bottom: 94px;
 }
+/*позиционирование на секции сотрудкики за работой*/
+.work-thumb {
+  position: relative;
+}
+.wraper-text-name {
+  width: 370px;
+  height: 70px;
+  background-color: rgba(47, 48, 58, 0.8);
+  position: absolute;
+  display: flex;
+
+  bottom: 0;
+  left: 0;
+}
+.text-name {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-right: ;
+  padding-left: ;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.17;
+  text-align: center;
+  text-transform: uppercase;
+  margin: auto;
+  padding: 0px;
+  color: var(--secondary-accent-color);
+}
+/*конец позиционирования*/
 
 .section-team {
   background: var(--bg-secondary);
@@ -369,10 +424,12 @@ img {
   height: 44px;
   border-radius: 50%;
 }
-.social-list-link:hover {
+.social-list-link:hover,
+.social-list-link:focus {
   background-color: var(--accent-color);
 }
-.social-list-link:hover svg {
+.social-list-link:hover svg,
+.social-list-link:focus svg {
   fill: var(--secondary-accent-color);
 }
 .team-list-content-wrapper {
@@ -403,17 +460,20 @@ img {
 .clients-list-icon {
   fill: var(--logo-color);
 }
-.clients-link:hover svg {
+.clients-link:hover svg,
+.clients-link:focus svg {
   fill: var(--accent-color);
 }
-.clients-list-icon:hover {
+.clients-list-icon:hover,
+.clients-list-icon:focus {
   fill: var(--accent-color);
 }
 .clients-margin {
   border: 1px solid var(--border-clients);
   border-radius: 4px;
 }
-.clients-margin:hover {
+.clients-margin:hover,
+.clients-margin:focus {
   border: 1px solid var(--accent-color);
 }
 .clients-margin + .clients-margin {
@@ -502,7 +562,8 @@ img {
   height: 44px;
   border-radius: 50%;
 }
-.social-item-footer:hover {
+.social-item-footer:hover,
+.social-item-footer:focus {
   fill: var(--accent-color);
 }
 .list-item-footer {
@@ -516,7 +577,8 @@ img {
 .list-item-footer:last-child {
   margin-right: 0px;
 }
-.list-item-footer:hover {
+.list-item-footer:hover,
+.list-item-footer:focus {
   background-color: var(--accent-color);
 }
 .social-svg-footer {
@@ -524,7 +586,8 @@ img {
   width: 20px;
   height: 20px;
 }
-.social-svg-footer:hover {
+.social-svg-footer:hover,
+.social-svg-footer:focus {
   fill: var(--secondary-accent-color);
 }
 
@@ -644,4 +707,28 @@ img {
   padding-bottom: 20px;
   padding-left: 24px;
   padding-right: 24px;
+}
+.image-thumb {
+  position: relative;
+  width: 370px;
+  height: 294px;
+  overflow: hidden;
+}
+.image-thumb > .overlay {
+  position: absolute;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.55;
+  color: var(--bg-secondary);
+  background-color: var(--accent-color);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 63px 24px;
+  opacity: 0;
+}
+.image-thumb > .overlay:hover {
+  opacity: 1;
 }
