--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@
   --bg-header: #ffffff;
   --bg-hero: #c4c4c4;
   --bg-footer: #2f303a;
-  --bg-primary: #e5e5e5;
+  --bg-primary: #ffffff;
   --bg-secondary: #f5f4fa;
   --bg-box: #ffffff;
   --border-bottom: #ececec;
@@ -299,6 +299,7 @@ img {
 .section-title {
   font-size: 14px;
   line-height: 1.14;
+  text-transform: uppercase;
   margin: 0px 0px 10px 0px;
   padding: 0px;
 }
@@ -335,6 +336,7 @@ img {
   padding-bottom: 94px;
 }
 /*позиционирование на секции сотрудкики за работой*/
+
 .work-thumb {
   position: relative;
 }
@@ -352,8 +354,6 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-right: ;
-  padding-left: ;
   font-style: normal;
   font-weight: 700;
   font-size: 14px;
@@ -364,6 +364,7 @@ img {
   padding: 0px;
   color: var(--secondary-accent-color);
 }
+
 /*конец позиционирования*/
 
 .section-team {
@@ -573,6 +574,7 @@ img {
   margin-right: 10px;
   width: 44px;
   height: 44px;
+  background-color: rgba(255, 255, 255, 0.1);
 }
 .list-item-footer:last-child {
   margin-right: 0px;
@@ -630,6 +632,7 @@ img {
 .switch-button:hover,
 .switch-button:focus {
   background: var(--accent-color);
+  color: var(--secondary-accent-color);
 }
 
 .all-portfolio-list {
