--- a/css/styles.css
+++ b/css/styles.css
@@ -89,6 +89,7 @@ img {
   margin-right: 93px;
   padding-top: 24px;
   padding-bottom: 25px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .link-logo:hover,
 .link-logo:focus {
@@ -145,9 +146,11 @@ img {
   left: 0;
   bottom: 0;
   opacity: 0;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .menu-link:hover::after {
   opacity: 1;
+  color: var(--accent-color);
 }
 .site-nav {
   display: flex;
@@ -416,6 +419,7 @@ img {
   fill: var(--logo-color);
   width: 20px;
   height: 20px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-list-link {
   display: flex;
@@ -424,6 +428,7 @@ img {
   width: 44px;
   height: 44px;
   border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-list-link:hover,
 .social-list-link:focus {
@@ -460,6 +465,7 @@ img {
 }
 .clients-list-icon {
   fill: var(--logo-color);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .clients-link:hover svg,
 .clients-link:focus svg {
@@ -472,6 +478,7 @@ img {
 .clients-margin {
   border: 1px solid var(--border-clients);
   border-radius: 4px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .clients-margin:hover,
 .clients-margin:focus {
@@ -496,6 +503,7 @@ img {
   line-height: 1.19;
 
   margin-bottom: 20px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .logo-footer:hover,
 .logo-footer:focus {
@@ -575,6 +583,7 @@ img {
   width: 44px;
   height: 44px;
   background-color: rgba(255, 255, 255, 0.1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .list-item-footer:last-child {
   margin-right: 0px;
@@ -587,6 +596,7 @@ img {
   fill: var(--secondary-accent-color);
   width: 20px;
   height: 20px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-svg-footer:hover,
 .social-svg-footer:focus {
@@ -625,13 +635,15 @@ img {
 
   padding: 6px 22px 6px 22px;
   cursor: pointer;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .list-our-button + .list-our-button {
   margin-left: 8px;
 }
 .switch-button:hover,
 .switch-button:focus {
-  background: var(--accent-color);
+  background-color: var(--accent-color);
   color: var(--secondary-accent-color);
 }
 
@@ -734,4 +746,59 @@ img {
 }
 .image-thumb > .overlay:hover {
   opacity: 1;
+  animation: animate1 3000ms infinite;
+  animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+@keyframes animate1 {
+  0% {
+    transform: translateY(100%);
+  }
+  50% {
+    transform: translateY(0%);
+  }
+  100% {
+    transform: translateY(100%);
+  }
+}
+
+/* my backdrop*/
+.backdrop {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  position: fixed;
+  top: 0;
+  left: 0;
+  transition: all 300ms linear;
+}
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 528px;
+  min-height: 581px;
+  background: var(--bg-secondary);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+.modal-button-close {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+
+  background: var(--bg-secondary);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  cursor: pointer;
+}
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+/* end my backdrop*/
